RESOLVED FIXED285633
REGRESSION (286320@main): [iPadOS] YouTube in Safari requires two taps to start playback
https://bugs.webkit.org/show_bug.cgi?id=285633
Summary REGRESSION (286320@main): [iPadOS] YouTube in Safari requires two taps to sta...
Wenson Hsieh
Reported 2025-01-08 15:21:09 PST
Attachments
Wenson Hsieh
Comment 1 2025-01-08 15:39:43 PST
EWS
Comment 2 2025-01-08 18:55:31 PST
Committed 288627@main (859231d19f00): <https://commits.webkit.org/288627@main> Reviewed commits have been landed. Closing PR #38753 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.