REGRESSION (286320@main): [iPadOS] YouTube in Safari requires two taps to start playback https://bugs.webkit.org/show_bug.cgi?id=285633 rdar://140237391

Reviewed by Abrar Rahman Protyasha.

Guard the changes in 286320@main, so that it's behind a site-specific quirk.

* Source/WebCore/page/ios/ContentChangeObserver.cpp:
(WebCore::ContentChangeObserver::didAddMouseMoveRelatedEventListener):

* LayoutTests/fast/events/touch/ios/content-observation/add-mouseout-event-listener-on-hover-quirk-expected.txt: Renamed from LayoutTests/fast/events/touch/ios/content-observation/add-mouseout-event-listener-on-hover-expected.txt.
* LayoutTests/fast/events/touch/ios/content-observation/add-mouseout-event-listener-on-hover-quirk.html: Renamed from LayoutTests/fast/events/touch/ios/content-observation/add-mouseout-event-listener-on-hover.html.

Keep this layout test passing by overriding the top document URL for the purposes of determining
active quirks. Additionally add a `-quirk` suffix to the name.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::shouldTreatAddingMouseOutEventListenerAsContentChange const):
(WebCore::handleSteamQuirks):
(WebCore::Quirks::determineRelevantQuirks):
* Source/WebCore/page/Quirks.h:
* Source/WebCore/page/QuirksData.h:

Remove an unused member variable.

* Source/WebCore/page/ios/ContentChangeObserver.cpp:
(WebCore::ContentChangeObserver::didAddMouseMoveRelatedEventListener):

Canonical link: https://commits.webkit.org/288627@main